# cc-md-preview

./: .gitignore  CLAUDE.md  DEVLOG.md  README.md  index.html  package.json  pnpm-lock.yaml  todo.md  vite.config.ts
.claude/: settings.local.json
.claude/commands/: done.md
.github/workflows/: release.yml
doc/: build-guide.md  tauri-guide.md
docs/: apple-distribution.md  changelog.md  design.md  notes.md  plan.md  tasks.md  workflow.md
docs/decisions/: 000-template.md  001-frontend-framework.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: chrome_cache.rs  markdown.rs  mod.rs
src-tauri/src/platform/: cache_paths.rs  mod.rs
src/components/layout/: AppLayout.vue  AppSidebar.vue
src/modules/chrome-cache/: types.ts  utils.ts
src/modules/chrome-cache/components/: CacheBreakdown.vue  CacheEntryList.vue  CacheSummaryCard.vue  CleanupButton.vue
src/modules/chrome-cache/views/: ChromeCacheView.vue
src/modules/markdown/components/: DropZone.vue  FileCard.vue  FolderCardGrid.vue  MarkdownPreview.vue  MarkdownToolbar.vue  TabBar.vue  ThemeGrid.vue  ThemeSelector.vue
src/modules/markdown/composables/: useFileDrop.ts  useMarkdownRenderer.ts  useMermaid.ts  useTabKeyCycling.ts
src/router/: index.ts
src/stores/: chrome-cache.ts  markdown.ts
src/styles/: main.css
src/styles/themes/: arctic.css  cobalt.css  dracula.css  github-dark.css  github.css  minimal.css  monokai.css  nord.css  solarized.css  sunset.css  terminal.css
(+2 files in other folders)
